--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@next/env": "^15.0.2",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
