--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "15.0.2"
   }
