--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   },
   "dependencies": {
     "@atlaskit/pragmatic-drag-and-drop": "^1.4.0",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
+    "@atlaskit/pragmatic-drag-and-drop-live-region": "^1.1.0",
+    "@atlaskit/pragmatic-drag-and-drop-react-accessibility": "^1.2.1",
+    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^1.1.3",
+    "@hello-pangea/dnd": "^17.0.0",
     "@next/env": "^15.0.2",
+    "i": "^0.3.7",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "socket.io-client": "^2.3.0"
+    "ngx-drag-drop": "^18.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^2.3.0",
+    "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
