--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^1.1.3",
     "@hello-pangea/dnd": "^17.0.0",
     "@next/env": "^15.0.2",
+    "cors": "^2.8.5",
     "i": "^0.3.7",
     "next": "15.0.2",
+    "next-connect": "^1.0.0",
     "ngx-drag-drop": "^18.0.2",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io-client": "^2.3.0",
